tests/e2e/semantics/ops_boolean_int_regex.story
a = 1 and /foo/
